--- a/pom.xml
+++ b/pom.xml
@@ -113,11 +113,18 @@
             <version>${swagger-codegen-version}</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>${testng-version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <swagger-codegen-version>2.4.15</swagger-codegen-version>
         <maven-plugin-version>1.0.0</maven-plugin-version>
         <junit-version>4.8.1</junit-version>
+        <testng-version>6.9.6</testng-version>
     </properties>
 </project>
